--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: ./assets/img/profile.jpg
+avatar: /assets/img/profile.jpg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
