--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,6 +6,6 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-rafaferreira011:
+rafaelmaferreira:
   name: Rafael Martin Alves Ferreira
   url: https://www.linkedin.com/in/rafaelmaferreira/
