--- a/_data/share.yml
+++ b/_data/share.yml
@@ -1,5 +1,5 @@
-#  Sharing options at the bottom of the post.
-#  Icons from <https://fontawesome.com/>
+# Sharing options at the bottom of the post.
+# Icons from <https://fontawesome.com/>
 
 platforms:
   - type: Linkedin
@@ -7,13 +7,12 @@ platforms:
     link: "https://www.linkedin.com/sharing/share-offsite/?url=URL"
 
   - type: Twitter
-    icon: "fa-brands fa-square-x-twitter"
+    icon: "fab fa-twitter"
     link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
 
   - type: WhatsApp
-    icon: "fa-brands fa-whatsapp"
-      #<i class="fa-brands fa-whatsapp" style="color: #242424;"></i>
-    link: "https://api.whatsapp.com/send?url=text=TITLE&url=URL"
+    icon: "fab fa-whatsapp"
+    link: "https://api.whatsapp.com/send?text=TITLE&url=URL"
 
   - type: Telegram
     icon: "fab fa-telegram"
