--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,6 @@ url: "https://rafaelmaferreira.com.br"
 github:
   username: rafaelmaferreira # change to your github username
 
-# twitter:
-#   username: twitter_username # change to your twitter username
-
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
@@ -41,9 +38,8 @@ social:
     - https://www.linkedin.com/in/rafaelmaferreira/
     - https://www.youtube.com/@LowOps-Channel
     - https://github.com/rafaelmaferreira
-    - https://medium.com/@rafaelmaferreira' 
+    - https://medium.com/@rafaelmaferreira
     - https://www.instagram.com/rafaelmaferreira11/
-
 
 google_site_verification: # fill in to your verification string
 
@@ -81,31 +77,21 @@ toc: true
 
 comments:
   active: "giscus" # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
-  # The active options are as follows:
-  disqus:
-    shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
-  # utterances settings › https://utteranc.es/
-  utterances:
-    repo: # <gh-username>/<repo>
-    issue_term: # < url | pathname | title | ...>
-  # Giscus options › https://giscus.app
   giscus:
     repo: "rafaelmaferreira/rafaferreira011.github.io"
-    repo_id:
+    repo_id: "MDEwOlJlcG9zaXRvcnkxMzM0NTYzOTQ="
     category: "Comments"
-    category_id:
-    mapping: # optional, default to 'pathname'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    category_id: "DIC_kwDOA1ZnDM4B-W_Y"
+    mapping: "pathname"
+    input_position: "bottom"
+    lang: "en"
+    reactions_enabled: "1"
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
   self_host:
-    enabled: # boolean, keep empty means false
-    # specify the Jekyll environment, empty means both
-    # only works if `assets.self_host.enabled` is 'true'
-    env: # [development|production]
+    enabled: true
+    env: "production"
 
 pwa:
   enabled: true # the option for PWA feature
@@ -121,7 +107,6 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts: # Rouge Options › https://github.com/jneen/rouge#full-options
     css_class: highlight
-    # default_lang: console
     span:
       line_numbers: false
     block:
@@ -141,8 +126,6 @@ defaults:
       layout: post
       comments: true # Enable comments in posts.
       toc: true # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
       permalink: /posts/:title/
   - scope:
       path: _drafts
