--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ google_site_verification: # fill in to your verification string
 # The end of `jekyll-seo-tag` settings
 
 google_analytics:
-  id: # fill in your Google Analytics ID
+  id: G-0RVS46EEQ5 # fill in your Google Analytics ID
 
 # Prefer color scheme setting.
 #
