--- a/_config.yml
+++ b/_config.yml
@@ -115,6 +115,10 @@ paginate: 10
 # The base URL of your site
 baseurl: ""
 
+# Jekyll Plugins
+plugins:
+  - jekyll-feed
+
 # ------------ The following options are not recommended to be modified ------------------
 
 kramdown:
