--- a/_config.yml
+++ b/_config.yml
@@ -78,7 +78,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: /assets/img/profile.jpg
+avatar: /assets/img/profile.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
