--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
+*.mp4 binary
 *.jpg binary
 *.jpeg binary
 *.gif binary
