--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ avatar: /assets/img/profile.png
 toc: true
 
 comments:
-  active: "giscus" # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
+  provider: "giscus" # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
