--- a/_config.yml
+++ b/_config.yml
@@ -112,6 +112,7 @@ pwa:
   enabled: true # the option for PWA feature
 
 paginate: 10
+paginate_path: "/blog/page:num/"
 
 # The base URL of your site
 baseurl: ""
