--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ comments:
   # Giscus options › https://giscus.app
   giscus:
     repo: "rafaelmaferreira/rafaelmaferreira.com.br"  # Nome do repositório GitHub
-    repo_id: "MDEwOlJlcG9zaXRvcnkxMjk2MjY5NQ=="       # ID do repositório (obtido no Giscus)
+    repo_id: "R_kgDOKnjYmA"       # ID do repositório (obtido no Giscus)
     category: General                              # Nome da categoria escolhida
     category_id: "DIC_kwDOA5lwPs4B-cuS"               # ID da categoria (obtido no Giscus)
     mapping: pathname                                  # Mapeamento dos comentários
