--- a/_config.yml
+++ b/_config.yml
@@ -142,14 +142,14 @@ collections:
 defaults:
   - scope:
       path: "" # An empty string here means all files in the project
-      type: posts
+      type: tabs
     values:
       layout: post
       comments: true # Enable comments in posts.
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /:categories/:title/
+      permalink: /:blog/:title/
   - scope:
       path: _drafts
     values:
