--- a/_config.yml
+++ b/_config.yml
@@ -198,4 +198,4 @@ jekyll-archives:
     tag: tag
   permalinks:
     tag: /tags/:name/
-    category: /categories/:name/
+    category: /posts/:name/
