--- a/_config.yml
+++ b/_config.yml
@@ -149,7 +149,7 @@ defaults:
       toc: true # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /:post/:title/
+      permalink: /:blog/:title/
   - scope:
       path: _drafts
     values:
@@ -159,7 +159,7 @@ defaults:
       type: tabs # see `site.collections`
     values:
       layout: page
-      permalink: /:post/:title/
+      permalink: /:blog/:title/
   - scope:
       path: assets/img/favicons
     values:
@@ -198,4 +198,4 @@ jekyll-archives:
     tag: tag
   permalinks:
     tag: /tags/:name/
-    category: /posts/:name/
+    category: /blog/:name/
