--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Rafael Martin Alves Ferreira
-  email: rafael.maferreira@gmail.com # change to your email address
+  email: rafael.maferreira94@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://www.linkedin.com/in/rafaelmaferreira/
