--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,6 +6,6 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-rafaelmaferreira:
+orafaelferreira:
   name: Rafael Martin Alves Ferreira
-  url: https://www.linkedin.com/in/rafaelmaferreira/
+  url: https://www.linkedin.com/in/orafaelferreiraa/
