--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,15 +2,11 @@
 
 - type: linkedin
   icon: 'fab fa-linkedin'
-  url: 'https://www.linkedin.com/in/rafaelmaferreira/'
+  url: 'https://www.linkedin.com/in/orafaelferreiraa/'
 
 - type: youtube
   icon: 'fab fa-youtube'
   url: 'https://www.youtube.com/@LowOps-Channel'
-
-- type: youtube
-  icon: 'fab fa-youtube'
-  url: 'https://www.youtube.com/@AzureFloripa'
 
 - type: spotify
   icon: 'fab fa-spotify'
@@ -22,15 +18,15 @@
 
 - type: github
   icon: 'fab fa-github'
-  #url: 'https://github.com/rafaelmaferreira'  # Uncomment and add URL when available
+  #url: 'https://github.com/orafaelferreiraa'  # Uncomment and add URL when available
 
 - type: medium
   icon: 'fab fa-medium'
-  url: 'https://medium.com/@rafaelmaferreira'
+  url: 'https://medium.com/@orafaelferreiraa'
 
 - type: instagram
   icon: 'fab fa-instagram'
-  url: 'https://www.instagram.com/rafaelmaferreira11/'
+  url: 'https://www.instagram.com/rafaelmaferreira1/'
 
 # Uncomment and complete the url below to enable more contact options
 
