--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: >- # used by seo meta and the atom feed
 url: "https://orafaelferreira.com"
 
 github:
-  username: orafaelferreira # change to your github username
+  username: orafaelferreiraa # change to your github username
 
 # twitter:
 #   username: twitter_username # change to your twitter username
